[package]
name = "randmst"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
average = "0.13.1"
bitvector = "0.1.5"
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
derive_more = "0.99.17"
rand = { version = "0.8.5", features = ["small_rng"]}
rand_distr = "0.4.3"
rayon = "1.6.1"
